# biblioteca-do-fred

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
migrations/: env.py
migrations/versions/: 165de49e3188_tabelas_criadas_v1.py  6d003ad779f6_.py  8cab96550846_.py
src/: __init__.py  app.py  models.py
src/models/: author_model.py  item_model.py  publisher_model.py  user_model.py
src/routes/: author_route.py  item_route.py  publisher_route.py  user_route.py
src/schemas/: author_schema.py  item_schema.py  publisher_schema.py  user_schema.py
